Simplified navbar to be plain inline elements instead of fixed and having a margin-top on body, now when gets too big and wraps will push down page content instead of covering it

--- a/base-component/webroot/screen/webroot/css/webroot-layout.css
+++ b/base-component/webroot/screen/webroot/css/webroot-layout.css
@@ -16,7 +16,8 @@
 /* ========================== body, etc ========================== */
 
 html, body { height: 100%; }
-body { padding-top: 51px; } /* this is the initial load setting, will get set dynamically for navbar-fixed-top */
+/* body { padding-top: 51px; } /* this is the initial load setting, will get set dynamically for navbar-fixed-top */
+#top .navbar { margin-bottom: 0; border-radius: 0; }
 #apps-root { height: 100%; }
 /* #top, #content>.inner, #footer are the main page structure elements */
 #content { overflow: visible; background: transparent; min-height: 100%; }
